# riscv-disass-dpi

./: .gitignore  README.md  README.txt  meson.build
src/: lib.c  lib.cpp  rv_disass.c  rv_disass.h  rv_disass.svi
tests/: basic_insts.cpp  exhaustive.cpp  meson.build  test_common.h
tests/integration/: simple_nop_check.sv
tests/integration/verilator/: main.cpp  test.sh
tests/integration/vivado/: test.sh
